feat: added installation endpoint with province,district,substation,offset and limit filtering
