# src/features/readings/readings.routes.js
@@ -3,12 +3,14 @@ const { verifyInstallationJwt } = require("../../middleware/verify-installation-
 const { requireInstallationOwnership } = require("../../middleware/require-installation-ownership");
 const { readingRequest } = require("./reading-request");
 const { deviceWriteLimit, userReadLimit } = require("../../middleware/rate-limits");
-const { postReading, getReading, getLastReading, getReadings, getOverview } = require("./readings.controller");
+const { postReading, getReading, getLastReading, getReadings, getOverview, getInstallation, getInstallations } = require("./readings.controller");
 const { verifyUserJwt } = require("../../middleware/verify-user-jwt");
 const { validateReadingPath, validateInstallationPath } = require("./reading-path");
-const { validateReadingQuery, validateRegionalReadingQuery } = require("./reading-query");
+const { validateReadingQuery, validateRegionalReadingQuery, validateInstallationQuery } = require("./reading-query");
 
 router.get("/readings", verifyUserJwt, userReadLimit, validateRegionalReadingQuery, getReadings);
+router.get("/installations", verifyUserJwt, userReadLimit, validateInstallationQuery, getInstallations);
+router.get("/installations/:installationId", verifyUserJwt, userReadLimit, validateInstallationPath, getInstallation);
 router.get("/installations/:installationId/last-reading", verifyUserJwt, userReadLimit, validateInstallationPath, getLastReading);
 router.get("/installations/:installationId/overview", verifyUserJwt, userReadLimit, validateInstallationPath, getOverview);
 router.post("/installations/:installationId/readings", verifyInstallationJwt, requireInstallationOwnership, readingRequest, deviceWriteLimit, postReading);
